{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 459,
  "lineage": "8827e60c-4fe1-ee4e-1eb0-01b3fe95e622",
  "resources": [
    {
      "module": "module.bastion[0]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "pnp_hub_bastion_vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-HUB-RG/providers/Microsoft.Network/networkInterfaces/PNP-HUB-BASTION-VM-NIC",
            "ip_configuration": [
              {
                "name": "PNP-HUB-NIC-CONFIG",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-HUB-RG/providers/Microsoft.Network/publicIPAddresses/PNP-HUB-BASTION-VM-IP",
                "subnet_id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-HUB-RG/providers/Microsoft.Network/virtualNetworks/pnp_hub_vnet/subnets/PNP-HUB-BASTION-PEP-SUBNET"
              }
            ],
            "location": "koreacentral",
            "mac_address": "60-45-BD-45-3E-15",
            "name": "PNP-HUB-BASTION-VM-NIC",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "PNP-HUB-RG",
            "virtual_machine_id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-HUB-RG/providers/Microsoft.Compute/virtualMachines/PNP-HUB-BS-VM"
          },
          "dependencies": [
            "module.bastion.azurerm_public_ip.pnp_hub_bastion_vm_ip",
            "module.network.azurerm_subnet.pnp_hub_bastion_pep_subnet",
            "module.network.azurerm_subnet.pnp_hub_iot_pep_subnet",
            "module.network.azurerm_subnet.pnp_hub_plh_pep_subnet",
            "module.network.azurerm_subnet.pnp_spoke_data_st_pep_subnet",
            "module.network.azurerm_subnet.pnp_spoke_syn_pep_subnet",
            "module.network.azurerm_virtual_network.pnp_hub_vnet",
            "module.network.azurerm_virtual_network.pnp_spoke_vnet",
            "module.network.azurerm_virtual_network_peering.peer_hub_to_spoke",
            "module.network.azurerm_virtual_network_peering.peer_spoke_to_hub",
            "module.resource_group.azurerm_resource_group.pnp_hub_rg",
            "module.resource_group.azurerm_resource_group.pnp_spoke_rg"
          ]
        }
      ]
    },
    {
      "module": "module.bastion[0]",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "connect_bastion_nic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-HUB-RG/providers/Microsoft.Network/networkInterfaces/PNP-HUB-BASTION-VM-NIC|/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-HUB-RG/providers/Microsoft.Network/networkSecurityGroups/PNP-HUB-BASTION-VM-NSG",
            "network_interface_id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-HUB-RG/providers/Microsoft.Network/networkInterfaces/PNP-HUB-BASTION-VM-NIC",
            "network_security_group_id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-HUB-RG/providers/Microsoft.Network/networkSecurityGroups/PNP-HUB-BASTION-VM-NSG"
          },
          "dependencies": [
            "module.bastion.azurerm_network_interface.pnp_hub_bastion_vm_nic",
            "module.bastion.azurerm_network_security_group.pnp_hub_bastion_vm_nsg",
            "module.bastion.azurerm_public_ip.pnp_hub_bastion_vm_ip",
            "module.network.azurerm_subnet.pnp_hub_bastion_pep_subnet",
            "module.network.azurerm_subnet.pnp_hub_iot_pep_subnet",
            "module.network.azurerm_subnet.pnp_hub_plh_pep_subnet",
            "module.network.azurerm_subnet.pnp_spoke_data_st_pep_subnet",
            "module.network.azurerm_subnet.pnp_spoke_syn_pep_subnet",
            "module.network.azurerm_virtual_network.pnp_hub_vnet",
            "module.network.azurerm_virtual_network.pnp_spoke_vnet",
            "module.network.azurerm_virtual_network_peering.peer_hub_to_spoke",
            "module.network.azurerm_virtual_network_peering.peer_spoke_to_hub",
            "module.resource_group.azurerm_resource_group.pnp_hub_rg",
            "module.resource_group.azurerm_resource_group.pnp_spoke_rg"
          ]
        }
      ]
    },
    {
      "module": "module.bastion[0]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "pnp_hub_bastion_vm_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-HUB-RG/providers/Microsoft.Network/networkSecurityGroups/PNP-HUB-BASTION-VM-NSG",
            "location": "koreacentral",
            "name": "PNP-HUB-BASTION-VM-NSG",
            "resource_group_name": "PNP-HUB-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDPAllow",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.azurerm_subnet.pnp_hub_bastion_pep_subnet",
            "module.network.azurerm_subnet.pnp_hub_iot_pep_subnet",
            "module.network.azurerm_subnet.pnp_hub_plh_pep_subnet",
            "module.network.azurerm_subnet.pnp_spoke_data_st_pep_subnet",
            "module.network.azurerm_subnet.pnp_spoke_syn_pep_subnet",
            "module.network.azurerm_virtual_network.pnp_hub_vnet",
            "module.network.azurerm_virtual_network.pnp_spoke_vnet",
            "module.network.azurerm_virtual_network_peering.peer_hub_to_spoke",
            "module.network.azurerm_virtual_network_peering.peer_spoke_to_hub",
            "module.resource_group.azurerm_resource_group.pnp_hub_rg",
            "module.resource_group.azurerm_resource_group.pnp_spoke_rg"
          ]
        }
      ]
    },
    {
      "module": "module.bastion[0]",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "pnp_hub_bastion_vm_nsg_3389_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-HUB-RG/providers/Microsoft.Network/networkSecurityGroups/PNP-HUB-BASTION-VM-NSG/securityRules/RDPAllow",
            "name": "RDPAllow",
            "network_security_group_name": "PNP-HUB-BASTION-VM-NSG",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "PNP-HUB-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion.azurerm_network_security_group.pnp_hub_bastion_vm_nsg",
            "module.network.azurerm_subnet.pnp_hub_bastion_pep_subnet",
            "module.network.azurerm_subnet.pnp_hub_iot_pep_subnet",
            "module.network.azurerm_subnet.pnp_hub_plh_pep_subnet",
            "module.network.azurerm_subnet.pnp_spoke_data_st_pep_subnet",
            "module.network.azurerm_subnet.pnp_spoke_syn_pep_subnet",
            "module.network.azurerm_virtual_network.pnp_hub_vnet",
            "module.network.azurerm_virtual_network.pnp_spoke_vnet",
            "module.network.azurerm_virtual_network_peering.peer_hub_to_spoke",
            "module.network.azurerm_virtual_network_peering.peer_spoke_to_hub",
            "module.resource_group.azurerm_resource_group.pnp_hub_rg",
            "module.resource_group.azurerm_resource_group.pnp_spoke_rg"
          ]
        }
      ]
    },
    {
      "module": "module.bastion[0]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pnp_hub_bastion_vm_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-HUB-RG/providers/Microsoft.Network/publicIPAddresses/PNP-HUB-BASTION-VM-IP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "PNP-HUB-BASTION-VM-IP",
            "resource_group_name": "PNP-HUB-RG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.network.azurerm_subnet.pnp_hub_bastion_pep_subnet",
            "module.network.azurerm_subnet.pnp_hub_iot_pep_subnet",
            "module.network.azurerm_subnet.pnp_hub_plh_pep_subnet",
            "module.network.azurerm_subnet.pnp_spoke_data_st_pep_subnet",
            "module.network.azurerm_subnet.pnp_spoke_syn_pep_subnet",
            "module.network.azurerm_virtual_network.pnp_hub_vnet",
            "module.network.azurerm_virtual_network.pnp_spoke_vnet",
            "module.network.azurerm_virtual_network_peering.peer_hub_to_spoke",
            "module.network.azurerm_virtual_network_peering.peer_spoke_to_hub",
            "module.resource_group.azurerm_resource_group.pnp_hub_rg",
            "module.resource_group.azurerm_resource_group.pnp_spoke_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network[0]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "pnp_hub_bastion_pep_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-HUB-RG/providers/Microsoft.Network/virtualNetworks/pnp_hub_vnet/subnets/PNP-HUB-BASTION-PEP-SUBNET",
            "name": "PNP-HUB-BASTION-PEP-SUBNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "PNP-HUB-RG",
            "virtual_network_name": "pnp_hub_vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.pnp_hub_vnet",
            "module.resource_group.azurerm_resource_group.pnp_hub_rg",
            "module.resource_group.azurerm_resource_group.pnp_spoke_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network[0]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "pnp_hub_iot_pep_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-HUB-RG/providers/Microsoft.Network/virtualNetworks/pnp_hub_vnet/subnets/PNP-HUB-IOT-PEP-SUBNET",
            "name": "PNP-HUB-IOT-PEP-SUBNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "PNP-HUB-RG",
            "virtual_network_name": "pnp_hub_vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.pnp_hub_vnet",
            "module.resource_group.azurerm_resource_group.pnp_hub_rg",
            "module.resource_group.azurerm_resource_group.pnp_spoke_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network[0]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "pnp_hub_plh_pep_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-HUB-RG/providers/Microsoft.Network/virtualNetworks/pnp_hub_vnet/subnets/PNP-HUB-PLH-PEP-SUBNET",
            "name": "PNP-HUB-PLH-PEP-SUBNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "PNP-HUB-RG",
            "virtual_network_name": "pnp_hub_vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.pnp_hub_vnet",
            "module.resource_group.azurerm_resource_group.pnp_hub_rg",
            "module.resource_group.azurerm_resource_group.pnp_spoke_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network[0]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "pnp_spoke_data_st_pep_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-SPOKE-RG/providers/Microsoft.Network/virtualNetworks/pnp_spoke_vnet/subnets/PNP-SPOKE-DATA-ST-PEP-SUBNET",
            "name": "PNP-SPOKE-DATA-ST-PEP-SUBNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "PNP-SPOKE-RG",
            "virtual_network_name": "pnp_spoke_vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.pnp_spoke_vnet",
            "module.resource_group.azurerm_resource_group.pnp_hub_rg",
            "module.resource_group.azurerm_resource_group.pnp_spoke_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network[0]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "pnp_spoke_syn_pep_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-SPOKE-RG/providers/Microsoft.Network/virtualNetworks/pnp_spoke_vnet/subnets/PNP-SPOKE-SYN-PEP-SUBNET",
            "name": "PNP-SPOKE-SYN-PEP-SUBNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "PNP-SPOKE-RG",
            "virtual_network_name": "pnp_spoke_vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.pnp_spoke_vnet",
            "module.resource_group.azurerm_resource_group.pnp_hub_rg",
            "module.resource_group.azurerm_resource_group.pnp_spoke_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network[0]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "pnp_hub_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "fb39dbab-2907-4482-a832-bdeca3b1291e",
            "id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-HUB-RG/providers/Microsoft.Network/virtualNetworks/pnp_hub_vnet",
            "location": "koreacentral",
            "name": "pnp_hub_vnet",
            "resource_group_name": "PNP-HUB-RG",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-HUB-RG/providers/Microsoft.Network/virtualNetworks/pnp_hub_vnet/subnets/PNP-HUB-BASTION-PEP-SUBNET",
                "name": "PNP-HUB-BASTION-PEP-SUBNET"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-HUB-RG/providers/Microsoft.Network/virtualNetworks/pnp_hub_vnet/subnets/PNP-HUB-IOT-PEP-SUBNET",
                "name": "PNP-HUB-IOT-PEP-SUBNET"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-HUB-RG/providers/Microsoft.Network/virtualNetworks/pnp_hub_vnet/subnets/PNP-HUB-PLH-PEP-SUBNET",
                "name": "PNP-HUB-PLH-PEP-SUBNET"
              }
            ]
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.pnp_hub_rg",
            "module.resource_group.azurerm_resource_group.pnp_spoke_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network[0]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "pnp_spoke_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "219ce413-7c70-4183-b1e4-3c17235a495a",
            "id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-SPOKE-RG/providers/Microsoft.Network/virtualNetworks/pnp_spoke_vnet",
            "location": "koreacentral",
            "name": "pnp_spoke_vnet",
            "resource_group_name": "PNP-SPOKE-RG",
            "subnet": [
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-SPOKE-RG/providers/Microsoft.Network/virtualNetworks/pnp_spoke_vnet/subnets/PNP-SPOKE-SYN-PEP-SUBNET",
                "name": "PNP-SPOKE-SYN-PEP-SUBNET"
              },
              {
                "address_prefix": "10.1.2.0/24",
                "id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-SPOKE-RG/providers/Microsoft.Network/virtualNetworks/pnp_spoke_vnet/subnets/PNP-SPOKE-DATA-ST-PEP-SUBNET",
                "name": "PNP-SPOKE-DATA-ST-PEP-SUBNET"
              }
            ]
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.pnp_hub_rg",
            "module.resource_group.azurerm_resource_group.pnp_spoke_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network[0]",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer_hub_to_spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-HUB-RG/providers/Microsoft.Network/virtualNetworks/pnp_hub_vnet/virtualNetworkPeerings/peer_hub_to_spoke",
            "name": "peer_hub_to_spoke",
            "remote_virtual_network_id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-SPOKE-RG/providers/Microsoft.Network/virtualNetworks/pnp_spoke_vnet",
            "resource_group_name": "PNP-HUB-RG",
            "use_remote_gateways": false,
            "virtual_network_name": "pnp_hub_vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.pnp_spoke_vnet",
            "module.resource_group.azurerm_resource_group.pnp_hub_rg",
            "module.resource_group.azurerm_resource_group.pnp_spoke_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network[0]",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer_spoke_to_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-SPOKE-RG/providers/Microsoft.Network/virtualNetworks/pnp_spoke_vnet/virtualNetworkPeerings/peer_spoke_to_hub",
            "name": "peer_spoke_to_hub",
            "remote_virtual_network_id": "/subscriptions/187d0279-23aa-4f7d-9f3f-fc1a8ac639d5/resourceGroups/PNP-HUB-RG/providers/Microsoft.Network/virtualNetworks/pnp_hub_vnet",
            "resource_group_name": "PNP-SPOKE-RG",
            "use_remote_gateways": false,
            "virtual_network_name": "pnp_spoke_vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.pnp_hub_vnet",
            "module.resource_group.azurerm_resource_group.pnp_hub_rg",
            "module.resource_group.azurerm_resource_group.pnp_spoke_rg"
          ]
        }
      ]
    }
  ]
}